[package]
name = "mediatimer_init"
version = "0.1.5"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clokwerk = "0.4.0"
dotenvy = "0.15.7"
home = "0.5.11"
log = "0.4.27"
ratatui = "0.29.0"
regex = "1.11.1"
strum = {version ="0.27.1", features = ["derive"]}
systemd-journal-logger = "2.2.1"
whoami = "1.5.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

gstreamer = "0.23.6"
gstreamer-video = "0.23.6"
gstreamer-rtp = "0.23.5"
gstreamer-base = "0.23.6"

[dev-dependencies]
tempfile = "3.19.1"

[features]
eco = []
standard = []
pro = []
