[package]
name = "mediatimer_init"
version = "0.1.5"
edition = "2021"

[dependencies]
chrono = "0.4.40"
clokwerk = "0.4.0"
dotenvy = "0.15.7"
home = "0.5.11"
log = "0.4.27"
ratatui = "0.29.0"
regex = "1.11.1"
strum = {version ="0.27.1", features = ["derive"]}
systemd-journal-logger = "2.2.1"
whoami = "1.5.2"

[dev-dependencies]
tempfile = "3.19.1"

[features]
eco = []
standard = []
pro = []

[package.metadata.deb]
maintainer = "Alex McCartney <alex@considerate.digital>"
copyright = "2026, Alex McCartney <alex@considerate.digital>"
license-file = ["LICENSE.md", "0"]
depends = "$auto, ffmpeg, chromium, default-jdk, feh, foot"
priority= "optional"
assets = [
  { source = "target/release/mediatimer_init", dest = "usr/bin/mediatimer_init", mode = "755" },
  { source = "README.md", dest = "/usr/share/man/mediatimer_init/README", mode = "644" },
  { source = "debian/mediatimer_init.service", dest = "/usr/lib/systemd/user/", mode = "644" }
]
